--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,13 @@
   "name": "AI Reader Plugin",
   "version": "1.0",
   "description": "对选中的文本右键进行 AI 总结",
-  "permissions": ["contextMenus", "activeTab"],
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon192.png"
+  },
+  "permissions": ["contextMenus", "activeTab", "scripting", "storage"],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "options_page": "options.html"
 }
